[gd_scene load_steps=11 format=2]

[ext_resource path="res://Mario.png" type="Texture" id=1]
[ext_resource path="res://Mario/Mario.gd" type="Script" id=2]
[ext_resource path="res://MultiPlayer.gd" type="Script" id=3]
[ext_resource path="res://sounds/Die.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "die"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 23, 9, 14, 14 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 43, 9, 15, 16 ), Rect2( 63, 9, 11, 16 ), Rect2( 79, 10, 13, 15 ), Rect2( 63, 9, 11, 16 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 3, 9, 12, 16 ) ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 119, 9, 16, 16 ) ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 100, 9, 13, 16 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 32 )

[node name="Mario" type="KinematicBody2D" groups=[
"players",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 1.2
anims/die = SubResource( 1 )
anims/forward = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/jumping = SubResource( 4 )
anims/reversing = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 23, 9, 14, 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="MultiPlayer" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_bottom = 1080
smoothing_enabled = true

[node name="DeathSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="finished" from="DeathSoundPlayer" to="." method="_on_DeathSoundPlayer_finished"]
